# RustySharing-Service

./: .gitignore  Cargo.toml  README.md  build.rs  rcloneSetup.md  rpc_service.shell.nix
proto/: hello.proto  image_encoding.proto  leader_provider.proto  node_communication.proto  raft.proto
src/: election.rs  image_encoder.rs  lib.rs  main.rs  server.rs
