[package]
name = "rudp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rudp = "0.2" # Check for the latest version on crates.io
serde = { version = "1.0", features = ["derive"] }
image = "0.21.3"
bincode = "1.3" # For serialization
mio = "1.0.2"
serde_json = "1.0.132"
steganography = "1.0.2"
rand = "0.8.5"
