[package]
name = "rudp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.213", features = ["derive"]}
image = "0.21.3"
serde_json = "1.0.132"
steganography = "1.0.2"
rand = "0.8.5"
almost-raft = "0.3.0"
async-trait = "0.1.83"
